; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_pin.c_PinTypeSPI.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_pin.c_PinTypeSPI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PIN_STRENGTH_2MA = common dso_local global i32 0, align 4
@PIN_STRENGTH_4MA = common dso_local global i32 0, align 4
@PIN_TYPE_STD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PinTypeSPI(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @PinModeSet(i64 %5, i64 %6)
  %8 = load i64, i64* %3, align 8
  %9 = load i32, i32* @PIN_STRENGTH_2MA, align 4
  %10 = load i32, i32* @PIN_STRENGTH_4MA, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @PIN_TYPE_STD, align 4
  %13 = call i32 @PinConfigSet(i64 %8, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @PinModeSet(i64, i64) #1

declare dso_local i32 @PinConfigSet(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
